[gd_scene load_steps=4 format=3 uid="uid://b4eqf0uduc85v"]

[ext_resource type="Script" path="res://scripts/CameraLimit.gd" id="1_hknwk"]
[ext_resource type="Texture2D" uid="uid://d1hmupqym1b4m" path="res://assets/sprites/DownLimitCamera.png" id="2_o72ul"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lipb"]
size = Vector2(12.9032, 2321.43)

[node name="DownCameraLimit" type="StaticBody2D"]
position = Vector2(0, -8)
rotation = -1.5708
collision_layer = 0
collision_mask = 0
script = ExtResource("1_hknwk")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -10.0
offset_top = -2530.0
offset_right = 10.0
offset_bottom = 2670.0
scale = Vector2(0.800001, 1)
pivot_offset = Vector2(10, 400)
size_flags_vertical = 3
texture = ExtResource("2_o72ul")
expand_mode = 1
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.00144768, 70.0004)
scale = Vector2(1.24, 2.24)
shape = SubResource("RectangleShape2D_4lipb")
