[gd_scene load_steps=4 format=3 uid="uid://bc7onj04xh4km"]

[ext_resource type="Script" path="res://scripts/CameraLimit.gd" id="1_3xr4u"]
[ext_resource type="Texture2D" uid="uid://daf5q32wh8d7d" path="res://assets/sprites/RightLimitCamera.png" id="1_d3i0o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lipb"]
size = Vector2(14.5161, 800)

[node name="RightCameraLimit" type="StaticBody2D"]
position = Vector2(0, -50)
collision_layer = 9
script = ExtResource("1_3xr4u")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -750.0
offset_right = 10.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.800001, 1)
pivot_offset = Vector2(10, 100)
texture = ExtResource("1_d3i0o")
expand_mode = 1
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -350)
scale = Vector2(1.24, 1)
shape = SubResource("RectangleShape2D_4lipb")
